Fixed overflow of buttons

--- a/Front-end/Mindnet/src/Pages/Sign Up/SignUp.css
+++ b/Front-end/Mindnet/src/Pages/Sign Up/SignUp.css
@@ -30,6 +30,7 @@ main {
     flex-direction: column;
     gap: 28px;
     max-width: 500px;
+    margin-bottom: 40px;
 }
 
 #logo {
@@ -67,11 +68,13 @@ main {
     max-width: 500px;
 }
 
-.date-group input {
+.date-group input[type="number"]  {
     flex: 1;
-    width: 149px;
+    width: 150px;
 
 }
+
+
 
 
 h1 {
